fix: stop date wrapping on mobile

--- a/themes/skycoin/static/css/scss/_list.scss
+++ b/themes/skycoin/static/css/scss/_list.scss
@@ -31,5 +31,7 @@
   &__meta {
     font-size: 0.9375rem;
     color: $cool-gray;
+    white-space: nowrap;
+    padding-left: 0.5rem;
   }
 }
